src/main/java/com/example/library_application/validation/exeptions/NotFoundException.java
package com.example.library_application.validation.exeptions;

public class NotFoundException extends RuntimeException{
    public NotFoundException(String message) {
        super(message);
    }
}
